# grapp

./: .gitignore  CMakeLists.txt  README.md  computational_graph.dot
tests/: CMakeLists.txt
tests/v1/: CMakeLists.txt  testv1.cpp
v1/: CMakeLists.txt  engine.cpp  engine.h  nn.cpp  nn.h  run.cpp  v1.h
